--- a/Warhammer 40k Black Crusade/src/scss/_checkbox.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_checkbox.scss
@@ -22,7 +22,8 @@ label.sheet-styled-checkbox {
         top: 20%;
         z-index: 2;
 
-        &[type="checkbox"]:checked + span {
+        &[type="checkbox"]:checked + span,
+        &[type="radio"]:checked + span {
             background-color: $primary;
             color           : #fff;
         }
