Hero Lab character coming together

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -97,6 +97,7 @@ script(type="text/worker")
 	include src/js/Classes/PrimaryWeapon.js
 	include src/js/Classes/PrimaryArmor.js
 	include src/js/Classes/Character.js
+	include src/js/Classes/HeroLabCharacter.js
 
 	//- Generic helper functions used by shadowrunFunctions
 	//- Has unit tests
