--- a/Trophy Gold/src/pug/pages/pc.pug
+++ b/Trophy Gold/src/pug/pages/pc.pug
@@ -1,44 +1,83 @@
-.pc
-  .container.grid.navigation
-    img(alt='Emerald Grid' src='https://raw.githubusercontent.com/clevett/SheetTemplate/master/src/imgs/EProd_Title_Gloss.png')
-    each val in ['core', 'arms', 'advancement']
-      label.pseudo-button(data-i18n-title=`sheet type: ${val}`)
-        if val === 'core'
-          input(name=`attr_sheet_type` title=`@{sheet_type}` type='radio' value=val selected)
-        else
-          input(name=`attr_sheet_type` title=`@{sheet_type}` type='radio' value=val)
-        span.eclipse #{val}
+.pc.container.grid
+  h1.center(data-i18n='trophy gold')
+  .column
+    .row.grid.2column
+      .col
+        h2(data-i18n='name')
+        +textInput('character name')
+      .col
+        h2(data-i18n='player')
+        +textInput('player')
+    .row.grid.2column
+      .col
+        h2(data-i18n='occupation')
+        +textInput('occupation')
+        span(data-i18n='occupation description')
+      .col.repeating-container
+        h3(data-i18n='skills')
+        +repeatingText('occupation skills')
+    .row.grid.2column
+      .col
+        h2(data-i18n='background')
+        +textInput('background')
+      .col
+        h3(data-i18n='skill')
+        +textInput('background skill')
+    .row.grid.2column
+      .col
+        h2(data-i18n='training')
+        span(data-i18n='training description')
+      .col.repeating-container
+        h3(data-i18n='skills')
+        +repeatingText('training skills')
+    .row.grid.2column
+      .col
+        h2(data-i18n='household')
+        span(data-i18n='training description')
+      .col
+        h3(data-i18n='household name & description')
+        +textarea('household description')
+    .row.grid.2column
+      .col
+        h2(data-i18n='rituals')
+        span(data-i18n='rituals description')
+      .col.repeating-container
+        h3(data-i18n='rituals')
+        +repeatingText('rituals')
+    .row.grid.2column
+      .col
+        h2(data-i18n='library')
+        span(data-i18n='library description')
+      .col.repeating-container
+        h3(data-i18n='rituals')
+        +repeatingText('library rituals')
 
-  .container.grid.info
-    .rowx.grid.4autocolumn
-      each val in ['character name', 'player name']
-        h1(data-i18n=val)
-        +textInput(val)
+  .column
+    .row
+      h2(data-i18n='drive')
+      +textarea('drive')
+    .row.grid.hoard
+      h2(data-i18n='hoard')
+      -const hoardChecks = 0
+      while hoardChecks < 50
+        +checkboxInput(`hoard ${hoardChecks}`)
+    .row.equipment
+      h2(data-i18n='equipment')
+      .row
+        h3(data-i18n='backpack')
+      .row
+        h3(data-i18n='combat')
+      .row
+        h3(data-i18n='found equipment')
+    .row.conditions.repeating-container
+      h2(data-i18n='conditions')
+      +repeatingText('conditions')
 
-  .container.grid.characteristics
-    .rowx.text-center
-      h1(data-i18n='characteristics')
-    .rowx.grid.5column
-      each val in abilities
-        .col.grid
-          .rowx.text-center
-            h2.small-caps(data-i18n=val)
-    .rowx.grid.5column
-      each val in abilities
-        .col
-          +numberInput(val)
-
-  .skill-traits
-    .col.inline-block
-      .rowx
-        h1.text-center(data-i18n='skills')
-      each val in skillList
-        .rowx.grid.3columnbutton
-          h2(data-i18n=val)
-          +numberInput(val)
-          button.d20(name='' type='roll' value!='') b
-    .col.inline-block
-      .rowx
-        h1.text-center(data-i18n='traits')
-      .rowx.repeating-container
-        +repeatingText('traits')
+  .column
+    .row
+      h2(data-i18n='burdens')
+    .row
+      h2(data-i18n='gold')
+    .row
+      h2(data-i18n='ruin')
+      
