--- a/Trophy Gold/src/scss/pages/_pc.scss
+++ b/Trophy Gold/src/scss/pages/_pc.scss
@@ -2,110 +2,35 @@ div.sheet-pc {
 	border: 0.8em solid $gray;
 	background-color: $transparentGray;
 	padding: 2% 1%;
+	grid-template-columns: 3fr 2fr 0.5fr;
+	grid-row-gap: 1%;
 
 	-moz-box-shadow:    inset 0 0 10px #000000;
 	-webkit-box-shadow: inset 0 0 10px #000000;
 	box-shadow:         inset 0 0 10px #000000;
 
+	h1 {
+		grid-area: 1 / 1 / 1 / 4;
+	}
+
+	label {
+		border: 1px solid $dark;
+	}
+
 	div.sheet-row {
 		display: inline-grid;
 	}
 
-  div.sheet-navigation {
-    grid-template-columns: 1fr minmax(auto, 100px) minmax(auto, 100px) minmax(auto, 100px);
-        
-		img {
-			max-height: 8rem;
-		}
-
-    label.sheet-pseudo-button {
-			display: grid;
-			transition: all .2s;
-
-			&:hover {
-				transform: scale(1.1);
-			}
-
-			input {
-				min-height: 25px;
-				max-height: 25px;
-				position: relative;
-				opacity: 0;
-				width: 100%;
-				z-index: 2;
-
-				&, & + span {
-						grid-area: 1 / 1 / 1 / 1;
-				}
-
-				&:checked + span {
-						background-color: $light;
-						color: $dark;
-						margin-left: 5%;
-				}
-			}
-
-			span {
-				background-color: $primary;
-				border-radius: 10%;
-				border: 2px solid $primary;
-				color: $white;
-				cursor: pointer;
-				display: inline-block;
-				min-height: 25px;
-				max-height: 25px;
-				padding: 1% 3%;
-				text-transform: capitalize;
-				width: 80%;
-			}
-    }
-  }
-
-	div.sheet-info {
-		padding: 3% 2%;
-
-		div.sheet-rowx {
-			align-items: center;
-		}
+	div.sheet-hoard {
+		grid-template-columns: repeat(10, 1fr);
+		border-bottom: 2px solid $dark;
 	}
 
-	div.sheet-characteristics {
-		grid-template-rows: repeat(3, 1fr);
-		grid-row-gap: 3%;
+	div.sheet-equipment {
+		border-bottom: 2px solid $dark;
 	}
 
-  div.sheet-skill-traits {
-		div.sheet-col {
-			padding: 2%;
-		}
-
-		div.sheet-col:last-child() {
-			margin-left: 2%;
-		}
-
-		div.sheet-inline-block {
-			width: 49%;
-		}
-
-		div.sheet-repeating-container {
-			div.sheet-rowx {
-				grid-template-columns: 1fr repeat(2, 2rem);
-			}
-		}
-
-		input[name='attr_collapse'],
-		input[name='attr_collapse'] + span {
-			grid-area: 1 / 2 / 1 / 2;
-		}
-
-		input[name='attr_settings'],
-		input[name='attr_settings'] + span {
-			grid-area: 1 / 3 / 1 / 3;
-		}
-
-		div.sheet-collapse,
-		div.sheet-settings {
-			grid-column: 1 / 4;
-		}
-  }
+	div.sheet-column:not(:last-child) {
+		border-right: 1px solid $dark;
+	}
 }
